test/unpackError.slq

def main(){
	(x:int[2],):=(0:ğ”¹,); /// error
	return x;
}
